tests/ui/traits/const-traits/const-closures.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:8:12
   |
LL |         F: ~const FnOnce() -> u8,
   |            ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:9:12
   |
LL |         F: ~const FnMut() -> u8,
   |            ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:10:12
   |
LL |         F: ~const Fn() -> u8,
   |            ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:8:12
   |
LL |         F: ~const FnOnce() -> u8,
   |            ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:9:12
   |
LL |         F: ~const FnMut() -> u8,
   |            ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:10:12
   |
LL |         F: ~const Fn() -> u8,
   |            ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:23:20
   |
LL | const fn answer<F: ~const Fn() -> u8>(f: &F) -> u8 {
   |                    ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:23:20
   |
LL | const fn answer<F: ~const Fn() -> u8>(f: &F) -> u8 {
   |                    ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:24:5
   |
LL |     f() + f()
   |     ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL | const fn answer<F: ~const Fn() -> u8 + ~const Fn()>(f: &F) -> u8 {
   |                                      +++++++++++++

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:24:11
   |
LL |     f() + f()
   |           ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL | const fn answer<F: ~const Fn() -> u8 + ~const Fn()>(f: &F) -> u8 {
   |                                      +++++++++++++

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:12:5
   |
LL |     f() * 7
   |     ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL |         F: ~const FnOnce() -> u8 + ~const Fn(),
   |                                  +++++++++++++

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0015`.
